Update 03. Bigous Protocolous.md

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -277,7 +277,7 @@ at the end, when a computer wants to disconnect from the network it can send.
 ## Network Basic Input/Output System A.K.A NetBIOS
 ###### *[\#Layer-5]*
  
-The Network BIOS Protocol is a protocols that was used as a standard for communicating messages between two endpoints in the Link-Local Network. It provides `basic functionality for communication`. 
+The Network BIOS Protocol is a protocols that was used as a standard for communicating messages between two endpoints in the Local Area Network. It provides `basic functionality for communication`. 
 
 ### WHY WAS IT INVENTED?
 
@@ -292,7 +292,7 @@ To falicitate those network functions NetBIOS seperates to 3 services:
 > #### `NetBIOS Name Service`
 > ###### *[#UDP/137]*
 > 
-> NetBIOS provides it's own type of network architechture where each computer is represented by a 16 byte `name`, 15 ASCII characters to represent the computer and the last as a bit-field that represents what type of services the machine provides. The name will then be registered to an ip address (Only IPv4), will will enable name resolution.
+> NetBIOS provides it's own type of network architechture where each computer is represented by a 16 byte `name`, 15 ASCII characters to represent the computer and the last as a bit-field that represents what type of services the machine provides. The name will then be registered to an ip address (Only IPv4), and will enable name resolution.
 > 
 > NBNS (NetBios Name Service) also acts as an "Alternative" method of name resolution incase DNS and LLMNR both fail, The names are resolved by WINS (Windows Internet Naming Service) Servers. Where, instead of Domain names the server resolves NB names to IP addresses. The Servers are used to balance networking loads and to avoid flooding the network with broadcasts.
 > 
