--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -296,7 +296,12 @@ To falicitate those network functions NetBIOS seperates to 3 services:
 > 
 > NBNS (NetBios Name Service) also acts as an "Alternative" method of name resolution incase DNS and LLMNR both fail, The names are resolved by WINS (Windows Internet Naming Service) Servers. Where, instead of Domain names the server resolves NB names to IP addresses. The Servers are used to balance networking loads and to avoid flooding the network with broadcasts.
 > 
-> NOTICE: NBT Names are apply only to the link-local network, they are not to be confused with domain names.
+> NOTICE: NBT Names are apply only to the local area network, they are not to be confused with domain names.
+
+```diff
+- (Are WINS servers still used today? and are we required to have a WINS server in order to makes NBNS queries?)
+- (How the servers help to prevent foolding and balance networking load?)
+```
 
 > #### `NetBIOS Session Service`
 > ###### *[\#TCP/139]*
@@ -308,6 +313,9 @@ To falicitate those network functions NetBIOS seperates to 3 services:
 > 
 > Applications may also communicate over NetBIOS connectionless, using individual datagrams over the NetBIOS Datagram Service. The datgram services allows unicast, multicast and broadcast datagram messaging, using "group ips", an application can listen on a designated group ip to recieve a satagram sent to that group's members.
 
+```diff
+- (For what connectionless NetBIOS is used for?)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
