--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -334,12 +334,20 @@ The idea for a terminal that can interface with the network was proposed on [rfc
 
 The telnet protocol is mostly used by the telnet subsystem in your machine, using that system you may connect to another machine with the protocol and send information (namely commands or their outputs) bi-directionaly using the command line interface. Telnet is strictly characterial, and work over platform as the subsystem can decode characters to match the system requirement.
 
-Since at the time of the protocol's manifestation the cyber threat wasn't as potent, all communication over TelNet is sent as cleartext (Not encrypted). Given that, telnet has to be manually enabled with the newer systems nowadays and they are frowned upon.
+```diff
+- (What do you mean by telnet is used by subsystem in your machine?)
+```
+Since at the time of the protocol's manifestation the cyber threat wasn't as potent, all communication over TelNet is sent as cleartext (Not encrypted). Given that, telnet has to be manually enabled with the newer systems nowadays.
 
 However, telnet still has uses like:
 * Old Systems that don't support newer protocols like SSH.
 * Configuring routers and network devices.
 * Checking if ports are open.
+
+```diff
+- (I there another vulnerability in telnet that we should be aware of?)
+- (How does telnet help me know if a port is open?)
+```
 
 
 ###### [Back to top](#bigous-protocolous)
