--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -345,7 +345,7 @@ However, telnet still has uses like:
 * Checking if ports are open.
 
 ```diff
-- (I there another vulnerability in telnet that we should be aware of?)
+- (Is there another vulnerability in telnet that we should be aware of?)
 - (How does telnet help me know if a port is open?)
 ```
 
@@ -366,11 +366,16 @@ The protocol to transfer files over the net was first prposed in 1971 on [rfc 11
 ### HOW DOES IT WORK?
 FTP operates as a kind of abstraction between the user typing service specific, both hosts using the service will have a `protocol interperter (PI)` of either a cient or server type and a `protocol data transfer process (DTP)`.
 
-The service allows the user to type in commands on the service specific terminal application after connecting to the server. The commands are global to all machine platforms, and are not OS dependant. Like: `mkdir` to create a directory, `bye` to disconnect from the server ,`help` that calls small Noam for help, `USER` to send username and `PASS` to send password in order to authenticate.
+The service allows the user to type in commands on the service specific terminal, after connecting to the server. The commands are global to all machine platforms, and are not OS dependant. Like: `mkdir` to create a directory, `bye` to disconnect from the server ,`help` that calls small Noam for help, `USER` to send username and `PASS` to send password in order to authenticate.
+
+```diff
+- (Calling him small Noam is offensive and disrespectful!!)
+- (Are there any more commands?)
+```
 
 > #### `Commands`
 >
-> Using a terminal the user can send and extract fils from the conneted host. The commands and files are transferred on two different data streams.
+> Using a terminal the user can send and extract files from the conneted host. The commands and files are transferred on two different data streams.
 Firstly, the `PI` will initiate a `control connection` with the other endpoint on the configured listening port (defaultly 21). On that connetion it will send commands and recieve output, that way the file transmission will not hinder command operations.
 > 
 > BIG DISCLAIMER
@@ -388,6 +393,10 @@ Firstly, the `PI` will initiate a `control connection` with the other endpoint o
 > There are two methods in which it may connect:
 > * Active - The server will initiate the connection to the user's host from port 20.
 > * Passive - If there is a FW in the network that blocks incoming connections the user's host will be the one to initiate the connection on an agreed high port.
+
+```diff
+- (How can the computers know if to choose active or passive?)
+```
 
 > #### `Transfer Modes`
 >
