TFTP in progres

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -421,7 +421,7 @@ Firstly, the `PI` will initiate a `control connection` with the other endpoint o
 ## Trivial File Transfer Protocol A.K.A TFTP
 ###### *[\#Layer-7] [\#UDP/69]*
 
-Trivial File Transfer Protocol is a fork of ftp that provides it's services on the **local-link network**. It was designed as a **lighweight** ftp version to transfer configuration files to network devices in the link-local network.
+Trivial File Transfer Protocol is a fork of ftp that provides it's services on the **local area network**. It was designed as a **lighweight** ftp version to transfer configuration files to network devices in the local area network.
 
 There are several differences between `FTP` and `TFTP`:
 
