--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -421,7 +421,7 @@ Firstly, the `PI` will initiate a `control connection` with the other endpoint o
 ## Trivial File Transfer Protocol A.K.A TFTP
 ###### *[\#Layer-7] [\#UDP/69]*
 
-Trivial File Transfer Protocol is a fork of ftp that provides it's services on the **local area network**. It was designed as a **lighweight** ftp version to transfer configuration files to network devices in the local area network.
+Trivial File Transfer Protocol is a fork of ftp that provides it's services on the **local-link network**. It was designed as a **lighweight** ftp version to transfer configuration files to network devices in the link-local network.
 
 There are several differences between `FTP` and `TFTP`:
 
@@ -443,17 +443,25 @@ There are several differences between `FTP` and `TFTP`:
 
 This protocol too works on a `Client/Server` basis, note that some concepts and terms carry over from the FTP section.
 
+```diff
+- (What commends are avilable in TFTP?)
+```
+
 > #### `DOWNLOAD`
 >
 > The way that the client sends commands to the server stays the same. The server listens for connections on UDP/69 (haha :D) and the client can  initiate a connection on it from a high port and transmits commands over it. Then once recieving a command to download a file, the server will open up another tftp process and connects back to the client high port.
 >
 > The way file transmission works is the server `breaks the needed file` into a `series of blocks` and send them to the client one by one `on UDP`. The server will then listen for an `acknowledgment` that the file block was recieved and send the next block in the series.
 
+```diff
+- (Why does it use UDP if it requires acknowledgment?)
+```
+
 > #### `UPLOAD`
 >
 > When the server recieves a commands to upload a file from the client it will `open a new tftp process` and `bind it to a random high port`. The new data transfer process will connect to the command sending port from the client and send an `Aknowledgment` to notify of the open port.
 >
-> From then on it's like uploading a file. The `client will slice the file` into a series of blocks, and send them one by one on UDP to the new server port. After sending each block it will `wait for an acknowledgment` before sending the next block.
+> From then on it's like downloading a file. The `client will slice the file` into a series of blocks, and send them one by one on UDP to the new server port. After sending each block it will `wait for an acknowledgment` before sending the next block.
 
 
 ###### [Back to top](#bigous-protocolous)
@@ -465,21 +473,32 @@ This protocol too works on a `Client/Server` basis, note that some concepts and 
 
 HTTP is the protocol used to send web pages over the internet. This is a very broad definition of the protocol but we will get into it later (Like I did to your mom).
 
+```diff
+- (NFDL)
+```
+
 ### OVERVIEW
 
 Http evolved so much over the years so I'll ty to summarize it to as little as possible.
 
-Overall, HTTP works as a request response type protocol, just like dns and dhcp. The whole point of it is to get the hosted webpage from the server, like "https://www.google.com" where I research this stuff or "jokes.moomoo.co.il" where I get my your mom jokes.
+Overall, HTTP works as a request response type protocol, just like dns and dhcp. The whole point of it is to get the hosted webpage from the server, like "https://www.google.com" where I research this stuff or "jokes.moomoo.co.il" where I get my 'your mom jokes'.
 
 [In the beninging](https://www.youtube.com/watch?v=fWKB8zdVM-U) the internet was in it's diapers, all you could find are super simple webpages like blogs. There was no need for a complicated protocol to transfer this data and that's where HTTP came in.
 ![The Original Spacejam Website](https://https://www.themarysue.com/wp-content/uploads/2010/12/SpaceJam_blankdcr.png)
 ###### pretty simple right?
 
+```diff
+- (There is no need to sum up so much about the protocol history I need the information of how it works now)
+- (Your url is broken)
+```
 
 > #### `HTTP/0.9`
 > 
 > It was used to send the HTML code that built the site as plaintext to the client visiting the site. **Emphasis on cleartext**.
 > On this protocol you only used mentioned a method (GET) and a resource in your request.
+```diff
+- (Could not understand the last sentence)
+```
 
 > #### `HTTP/1.0`
 >
@@ -488,6 +507,10 @@ Overall, HTTP works as a request response type protocol, just like dns and dhcp.
 > It added two more methods, POST and HEAD that allowed the user to send data to the site, and Head that returns the header information (metadata).
 >
 > It added content types, so that from now on you could send more types of content and not only HTML. Like your mother, except the fact she wont fit on the bandwith :(
+
+```diff
+- (Your jokes are too repetetive and it's annoying me)
+```
 
 > #### `HTTP/1.1`
 >
@@ -538,7 +561,11 @@ Let's break it down one by one, start with the most simple.
 > * `PUT`       Create or replace an existing resource on the server side.
 > * `DELETE`    Delete a resource on the server.
 > * `CONNECT`   Used to tunnel a connection to an http server through a VPN.
->
+
+```diff
+- (Can anyone just use PUT and change the resource on the server side?)
+```
+
 > And there are a few more.
 >
 > Reponse codes are numerical numbers that represent the response that happened on the server, if the processing of the request was handled fine then the code will be **200**, if a resource was not found then the code can be **404**. Response codes are broken down into 5 families, dictated by the first digit (the hundreds digit):
@@ -556,7 +583,13 @@ Let's break it down one by one, start with the most simple.
 > #### `Multiplexing Connections`
 >
 > Using HTTP/2.0 a client can send multiple `Frames` simultaneously using a concept called `STREAMs`. A `stream` is a bi-directional flow of data betwen the data and the server, using a `stream` the client sends and receives data from the server.
->
+
+
+```diff
+- (Between the data and the server?)
+```
+
+
 > Basically all communications over the networks happen on streams, what's special about HTTP/2.0 is that it allows opening and managing multiple streams under one session. Then the protocol can send request over different streams and not be bottlenecked by a big resource.
 > 
 > * A stream **can** be opened and closed by either client or server
