--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -614,18 +614,26 @@ Let's break it down one by one, start with the most simple.
 
 The Simple mail ransfer Protocol's job is to **mail and/or send** data to another `smtp server` on the network, similar to [Telnet](#teletype-network-aka-telnet). Smtp is used only for message forwarding, not retrieving.
 
+```diff
+- (In what way is it similar to telnet?)
+```
+
 ### WHY WAS IT INVENTED?
 The smtp protocol was invented in order to provide the ability to send mail over the network.
 
+```diff
+- (The least informative explanation I've seen)
+```
+
 ### HOW DOES IT WORK?
-SMTP is used to relay mail messages over the network from the local network's smtp server to the recipient local network's smtp server. More accurately the stmp protocol is used as a guideline to transfer mails from a **client MTA** (**M**essage **T**ransfer **A**gent) to a **server MTA**. Please do notice that the smtp protocol usually acts as a background service for e-mail applications on a user's computer like Office 356.
+SMTP is used to relay mail messages over the network from the local network's smtp server to the recipient local network's smtp server. More accurately the stmp protocol is used as a guideline to transfer mails from a **client MTA** (**M**essage **T**ransfer **A**gent) to a **server MTA**. Please do notice that the smtp protocol usually acts as a background service for e-mail applications on a user's computer like Office 365.
 
 > #### `Initializing a connection`
 >
 > An smtp session is initialized when a client establishes a connection with the server. A server will usually listen on the well-known port TCP/25.
 > 
 > 1. The server then send an `opening message`, something like "Yo, you wanna talk?".
-> 2. The client send back an EHLO or HELO response, EHLO is like "Hello I am <client> and I support more calls" and HELO is like "Hello I am <client>".
+> 2. The client send back an EHLO or HELO response, EHLO is like "Hello I am (client) and I support more calls" and HELO is like "Hello I am (client)".
 >
 > After this the connection is established and the client can begin sending commands to the server.
 
