--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -645,6 +645,9 @@ SMTP is used to relay mail messages over the network from the local network's sm
 >
 > If the DATA command processes correctly, the server will return a `250 OKAY` response and send the email to the **recipient's network's Server MTA**.
 
+```diff
+- (Is SMTP considered secure and safe to use?)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
