--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -659,7 +659,7 @@ SMTP is used to relay mail messages over the network from the local network's sm
 POP is used to let the user access their mails online, since smtp is only able to push emails to a destination mailbox.
 
 ### WHY WAS IT INVENTED?
-Smtp is the protocol used to send and forward mails to a mailbow on the mail server, but to view those emails interfacing with the server directly is required. No only do you need to go on the server but you also need both yout machine and the server to be connected. POP solves that issue by downloading you emails from the mail server for you, so you can access them from your machine and view them offline.
+Smtp is the protocol used to send and forward mails to a mailbox on the mail server, but to view those emails interfacing with the server directly is required. No only do you need to go on the server but you also need both yout machine and the server to be connected. POP solves that issue by downloading you emails from the mail server for you, so you can access them from your machine and view them offline.
 
 POP3 is the latest version of the protocol with POP 1 being the first, over the years more features have been added to the protocol to make it more useful.
 
@@ -667,11 +667,11 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 
 > #### `INITIATING A SESSION`
 > 
-> The server will listen to on a port, once the client connects and preforms a tcp-handshake it will send a greeting message and wait for commands, at this moment a session is established. During it's lifetime a session goes through multiple states..
+> The server will listen on a port, once the client connects and preforms a tcp-handshake, it will send a greeting message and wait for commands, at this moment a session is established. During it's lifetime a session goes through multiple states.
 
 > #### `AUTHENTICATION`
 >
-> The client has to authenticate to the server using USER and PASS commands to pass their credentials. After authenticating correctly the server opens the client's mailbox and locks any access to it's content so that they don't change in the midst of a session.
+> The client has to authenticate to the server using USER and PASS commands to pass their credentials. After authenticating correctly the server opens the client's mailbox and locks any access to it's content so that it won't change in the midst of a session.
 > 
 > **NOTICE** communication in POP is not secure and transmitted as cleartext. Special applications of this protocol do provide encryption though.
 
@@ -682,7 +682,11 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 >   * Download all e-mails and delete them from server. (`RDEL`)
 >   * Download all e-mails but keep them on the server. (`RETR`)
 >
-> After choosing an option the client can command to be sent all the read information (`RCEV`) and after recieving all the mails they send a confirmation that they recieved them (`RCVD`)
+> `After choosing an option the client can command to be sent all the read information` (`RCEV`) and after recieving all the mails they send a confirmation that they recieved them (`RCVD`)
+
+```diff
+- (I do not understant!)
+```
 
 > #### `[POP 3] TRANSACTION`
 >
