--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -714,6 +714,10 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 
 IMAP also dabbles in reading mail messages from a server, but it is way more efficient than POP. It was conceptualized becayse POP had many problems and IMAP was meant to address them.
 
+```diff
+- (What are the problems in pop that IMAP is meant to solve?)
+```
+
 ### WHAT DOES IT DO?
 
 IMAP allows the remote managment of folders called mailboxes on the mail server. IMAP allows more delicate control and syncronization between devices, it also allows to connect more than one client to the same mailbox at a time and more. The model of the protocol is also Server and Client to retrieve mail from the server and manage it remotely.
@@ -739,10 +743,6 @@ IMAP allows the remote managment of folders called mailboxes on the mail server.
 > A client can perform more operations in this mode like create, delete or remane a mailbox.
 > 
 > but I will not go over it.
-
-> #### `STATE 4: Logout State`
->
-> If the session initialization failed or the user input a `LOGOUT` command the server and client will terminate their connection.
 
 > #### `STATE 3: Selected State`
 >
@@ -793,10 +793,14 @@ Here is a flow-chart of how moving between states works.
 
 Flowchart taken from official [IMAP version 4 revision 2] rfc 9051.
 ```
+> #### `STATE 4: Logout State`
+>
+> If the session initialization failed or the user input a `LOGOUT` command the server and client will terminate their connection.
+
 
 ### MESSAGES
 
-A message is an item inside a mailbox that was sent from another mailbox, unltimately the point of the protocol is to let the client read these messages remotely.
+A message is an item inside a mailbox that was sent from another mailbox, ultimately the point of the protocol is to let the client read these messages remotely.
 A message may be flagged as one of these:
   *  `\Seen`, Message has been read. (For example: Marked as read in Gmail)
   *  `\Answered`, The message has been sent a reply.
@@ -812,16 +816,24 @@ A message may be flagged as one of these:
 ## Server Message Blocking Protocol A.K.A SMB
 ###### *[#Layer-7] [#TCP/445] [#TCP/139]*
 
-SMB is a protocol meant for file sharing, not to be confused with file transfer. This protocol allows a user on a Windows machine to share a folder over the network and let other user iteract with it on their local machine without downloading it. It works on a client/server model and uses commands to make the other endpoint operate.
+SMB is a protocol meant for file sharing, not to be confused with file transfer. This protocol allows a user on a Windows machine to share a folder over the network and let other users iteract with it on their local machine without downloading it. It works on a client/server model and uses commands to make the other endpoint operate.
 
 ### WHY WAS IT INVENTED?
 The protocol was invented on 1983 by Barry A. Feigenbaum at IBM in order to provide Hosts, printers and other network nodes `shared access` to files on the network. The protocol was then picked up by Microsoft and even since then it was buit upon with the 4th version of the protocol being the current standard. The protocol was also imitated and ported over to Linux to provide Unix based systems access to file sharing and interfacing abilities with Windows machines.
+
+```diff
+- (You say 4th versions but arent there just 3? You also written it below)
+```
 
 Over the years the protocol has been divided into dialects (or versions), with each of them building ontop of the one prior to it or changing something. Here are just a few:
 
 > #### `SMB V1.0`
 >
 > This was the first SMB protocol, it wasn't very efficient or secure. It is widely known that you should not use this protocol.
+
+```diff
+- (How did it work and why wasnt is secure?)
+```
 
 > #### `SMB V2.0`
 >
@@ -830,16 +842,25 @@ Over the years the protocol has been divided into dialects (or versions), with e
 > * Better performance.
 > * Better security.
 
+```diff
+- (How is the security better?)
+```
+
 > #### `SMB V3.0`
 >
 > This version was introduced with Windows 8 and Windows Server 2012, it provides a lot more facilitation abilities and security solutions. For example message signing and better, strong encryption.
 
 ### HOW DOES IT WORK?
-Communication with the protocol starts when the client send a request and the server returns a reponse, initiating a connection. Then a session is created with a set of keys, one for encryption and one for signing messages, known to both sides.
+Communication with the protocol starts when the client sends a request and the server returns a reponse, initiating a connection. Then a session is created with a set of keys, one for encryption and one for signing messages, known to both sides.
 
-As it's transport layer used can be either TCP (on port 445) or NetBIOS over TCP (nbss on port 139), The protocol also requires authentication. Either using NTLM or Kerberos (for domain purposes), the first one being vulnurable to attacks. After the authentication and checking permission for the shared folder the server will open a connection to the folder where thec leint can perform various operations, like read and write information from/to it, rename it, delete it, create a new file, copy and save it and more. All of these operations are done on the server side using commands sent by the client.
+`As it's transport layer used can be either TCP (on port 445) or NetBIOS over TCP (nbns on port 139), The protocol also requires authentication`. Either using NTLM or Kerberos (for domain purposes), the first one being vulnurable to attacks. After the authentication and checking permission for the shared folder the server will open a connection to the folder where the cleint can perform various operations, like read and write information from/to it, rename it, delete it, create a new file, copy, save it and more. All of these operations are done on the server side using commands sent by the client.
 
-At the end the client will send a command to close the connection and session and the server will follow through, the affect of the operations that the cleint made are saved real-time. Also high versio of SMB allow file handles that can persist though unexpected disconnections.
+At the end the client will send a command to close the connection and session and the server will follow through, the affect of the operations that the cleint made are saved real-time. Also high versions of SMB allow file handles that can persist though unexpected disconnections.
+
+```diff
+- (What do you mean?)
+- (How can we determine if we are using NTLM or Kerberos?)
+```
 
 
 ###### [Back to top](#bigous-protocolous)
