--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -869,6 +869,9 @@ At the end the client will send a command to close the connection and session an
 
 ## Simple Network Management Protocol A.K.A SNMP
 ###### *[#Layer-7] [#UDP/161]*
+```diff
+- (There is another port)
+```
 
 The Simple Network Management Protocol is used to collect device information, like cpu usage, up status and bandwith from all the devices over the network to allow simple network managment from one machine very easily.
 
@@ -887,10 +890,13 @@ The protocol was invented back in 1988, back then networks weren't as big as the
 
 > #### `TRAP/INFORM messages`
 >
-> If an interface goes offline on a specific device containing an snmp agent, the agent will send either a `TRAP` or `INFORM` alert to the NMS to notify it. Both alerts server the same purpose but are still a little different, that is in the way that they are communicated. An `INFORM alert` will wait for acknowledgment from the server and will resend if it didn't get a message back saying it was acknowledged, a `TRAP alert` will send a forget.
+> If an interface goes offline on a specific device containing an snmp agent, the agent will send either a `TRAP` or `INFORM` alert to the NMS to notify it. Both alerts have the same purpose but are still a little different, that in the way that they are communicated. An `INFORM alert` will wait for acknowledgment from the server and will resend if it didn't get a message back saying it was acknowledged, a `TRAP alert` will send a forget.
 
 So basically using these operations and with a MIB table on all devices a network administrator can display all the information about their network's devices, and get notified when a device doesn't work as needed.
 
+```diff
+- (Is the protocol secure?)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
@@ -907,6 +913,10 @@ The way time synchronization works over the internet is by devices syncing their
 
 NTP Servers on small networks will usually syncronize using stratum 1,2 or 3 servers off the internet and then the other devices on te network will syncronize off of that NTP server.
 
+```diff
+- (How would an NTP server syncronize in a Big network?)
+- (What happens in in the domain when the computers arent syncronized?)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
