Update 03. Bigous Protocolous.md

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -925,7 +925,7 @@ NTP Servers on small networks will usually syncronize using stratum 1,2 or 3 ser
 ## Transport Layer Security **/** Secure Socket Layer A.K.A TLS/SSL
 ###### *[#Layer-5] [#Application-Based-Port] [#Encrypted]*
 
-Both TLS and SSL are protocols used to encrypt information on the wire in a way that both endpoints can decrypt them, meaning that `they generate a set of symetric encryption eys for the given session`. That is why they belong in the `Session Layer`, the one that is also responsible for encryption.
+Both TLS and SSL are protocols used to encrypt information on the wire in a way that both endpoints can decrypt them, meaning that `they generate a set of symetric encryption keys for the given session`. That is why they belong in the `Session Layer`, the one that is also responsible for encryption.
 
 Nowadays TLS is the standard for session encryption and regarded as the better protocol, originally TLS was born from SSL 3.0 and superseeded it.
 
@@ -1117,6 +1117,10 @@ The whole process goes like this:
 3. Each fragment will have a MAC calculated and appended to it, the fragment will be back to it's original size.
 4. The fragments will be encrypted and a  Record Protocol header will be added to it.
 
+```diff
+- (Is the only purpose of the protocol is to create ecryption keys to symetrically encrypt the connection?)
+- (Stratesd checking this protocol but you wrote W-A-Y too much information summories it )
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
@@ -1129,6 +1133,9 @@ This protocol isn't really a standalone protocol but a more secure version of th
 
 for information about HTTPS/2.0 refer to the [HTTP](#hypertext-transfer-protocol-aka-http) section.
 
+```diff
+- (I wouldv'e included it as a subclause of HTTP)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
@@ -1137,7 +1144,15 @@ for information about HTTPS/2.0 refer to the [HTTP](#hypertext-transfer-protocol
 ## Internet Protocol Security A.K.A IPsec
 ###### *[#Layer-3] [#VPN] [#Encrypted]*
 
+```diff
+- (Port?)
+```
+
 IPsec is a protocol that provides VPN services through encryption, A VPN is "A private connection over the public network". IPsec encrypts all packet layers above layer 3, it does that with a process that is simillar to TLS/SSL. Something resembling a handshake, where all the magic happens. But it operates a little differently in concept.
+
+```diff
+- (Ipsec == VPN?)
+```
 
 ### WHY WAS IT INVENTED?
 
@@ -1176,7 +1191,7 @@ Both AH and ESP are encapsulation protocols, an IPsec VPN may use one or both of
 >
 > The **Authentication** SA is the way that both machines can authenticate the identity of the other machine, that can be using a digital certificate or RSA.
 >
-> The **Group** SA is the group number to use when exchanging keys using Diffie-Hellman, I wont go into the Diffie-Hellman protocol. Just know that a higher number means a amore secure key.
+> The **Group** SA is the group number to use when exchanging keys using Diffie-Hellman, I wont go into the Diffie-Hellman protocol. Just know that a higher number means a more secure key.
 >
 > So after agreeing on the five `SA`s, which we will refer to as a `Policy Set`, both peers create a securly encrypted communication "tunnel". First they authenticate eachother, and then they `create a shared secret key` using Diffie-Hellman and the `Policy Set`. Ontop of that *first tunnel* they will initiate the second phase of the IKE protocol.
 >
